package com.example.lab_2.model;

interface  IFactory {
    public MyShape createShape(int numberOfSides);
}
